Prevent linebreak in table header

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -65,6 +65,7 @@
 thead th {
   background-color: blue;
   color: white;
+  white-space: nowrap;
 }
 
 table a {
